<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/nav_home"/>
        <item
            android:id="@+id/nav_location"
            android:title="@string/nav_manage_location"
            android:icon="@drawable/nav_location"/>
        <item
            android:id="@+id/nav_forecast"
            android:title="@string/forecast"
            android:icon="@drawable/ic_baseline_date_range_24"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_setting"
            android:icon="@drawable/nav_setting"/>
    </group>
</menu>